fix: fix social-media-icons vertical alignment

--- a/static/css/SCSS/layout.scss
+++ b/static/css/SCSS/layout.scss
@@ -32,6 +32,7 @@ body {
 }
 
 #footer-social-buttons {
+  margin-top: 5px;
   list-style-type: none;
 }
 
